Fix CORS: use allowedOriginPatterns and enable anonymous auth